--- a/safespace/src/App.css
+++ b/safespace/src/App.css
@@ -51,6 +51,10 @@ html, body{
     color: #fff;
     margin: 50px;
     font-size: large;
+    background-color: rgb(17, 156, 248);
+    padding: 15px;
+    /* box-shadow: 10px 5px 5px rgb(243, 176, 52); */
+    box-shadow: 10px 5px 5px rgb(7, 3, 65);
 }
 
 .nav-container{
@@ -80,11 +84,19 @@ html, body{
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     margin: 50px;
+    
+}
+
+.about-text{
+    background-color: rgb(17, 156, 248);
+    box-shadow: 10px 5px 5px rgb(7, 3, 65);
+    padding: 20px;
 }
 
 .favs-header{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #fff;
     margin-left: 50px;
+    margin-top: 50px;
 
 }
